--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.2",
-        "sass": "^1.71.1"
+        "sass": "^1.71.1",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.56",
@@ -29,6 +30,7 @@
         "autoprefixer": "^10.4.18",
         "electron": "^29.1.0",
         "eslint": "^8.56.0",
+        "eslint-plugin-electron": "^7.0.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "postcss": "^8.4.35",
