--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/themes": "^2.0.3",
@@ -20,12 +21,14 @@
         "react-router-dom": "^6.22.2",
         "react-splitter-layout": "^4.0.0",
         "sass": "^1.71.1",
+        "uuid": "^9.0.1",
         "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
         "@types/react-splitter-layout": "^3.0.5",
+        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
         "@vitejs/plugin-react": "^4.2.1",
