--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "zustand": "^4.5.2"
     },
     "devDependencies": {
+        "@iconify-icon/react": "^2.0.1",
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
         "@types/react-splitter-layout": "^3.0.5",
