--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@lexical/react": "^0.14.2",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/themes": "^2.0.3",
+        "lexical": "^0.14.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-loading-skeleton": "^3.4.0",
