--- a/package.json
+++ b/package.json
@@ -4,12 +4,34 @@
     "version": "0.0.0",
     "type": "module",
     "main": "dist-electron/electron-main.js",
+    "author": {
+        "email": "anirudhasj441@gmail.com",
+        "name": "Coding Devil",
+        "url": "https://www.codingdevil.in"
+    },
     "scripts": {
         "dev": "vite",
         "start": "vite",
         "build": "tsc && vite build",
+        "build:linux": "npm run build && electron-builder --linux",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
+    },
+    "build": {
+        "appId": "automatic field detection kit",
+        "directories": {
+            "output": "./dist/electron/"
+        },
+        "linux": {
+            "target": "deb",
+            "icon": "./src/assets/programmer.png"
+        },
+        "win": {
+            "icon": "./src/assets/programmer.png"
+        }
+    },
+    "preload": {
+        "ts": "./src-electron/electron-preload.ts"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.1.0",
@@ -20,6 +42,7 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/themes": "^2.0.3",
+        "electron-is-dev": "^3.0.1",
         "lexical": "^0.14.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -41,6 +64,7 @@
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.18",
         "electron": "^29.1.0",
+        "electron-builder": "^24.13.3",
         "eslint": "^8.56.0",
         "eslint-plugin-electron": "^7.0.0",
         "eslint-plugin-react-hooks": "^4.6.0",
