--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "pr3-kanban-board",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.1.0-beta",
     "type": "module",
     "main": "dist-electron/electron-main.js",
     "author": {
